force-app/main/default/objects/Salary__c/Salary__c.object-meta.xml
<CustomObject>
    <label>Salary</label>
    <nameField>
        <label>Bank ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>