force-app/main/default/objects/Salary__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>AXIS</fullName>
            </value>
            <value>
                <fullName>STATE BANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>