force-app/main/default/objects/Salary__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>