force-app/main/default/objects/Salary__c/fields/Bank_IFSC_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_IFSC_Number__c</fullName>
    <label>Bank IFSC Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>