force-app/main/default/objects/Salary__c/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <formula>Employee__r.Company__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Email</label>
    <type>Text</type>
</CustomField>